[TASK] add reset cookie for demo

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -28,6 +28,7 @@
 				Download .zip
 			</a>
 		</div>
+		<div id="resetcookiewrap" class="resetcookiewrap"><button id="resetcookie" onclick="resetCookie()" class="btn">Display Cookiemessage</button></div>
 		<h2>HTML-Markup for the script</h2>
 		<p>If you use scss, you can copy the scss file from <code>source/sass/cookiemessage.scss</code></p>
 		<pre><code class="html">[cookiemessageEscape]</code></pre>
@@ -37,6 +38,7 @@
 	</div>
 [cookiemessage]
 	<script type="text/javascript" src="cookiemessage.js" ></script>
+	<script type="text/javascript" src="demo.js" ></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
 </body>
