[FEATURE] add new positions for the message

--- a/source/html/cookiemessage.html
+++ b/source/html/cookiemessage.html
@@ -1,3 +1,3 @@
 <div id="cookiemessage" class="cookiemessage">
-	We use cookies, just to track visits to our website, we store no personal details. <a class="cookiemessage__link" href="#" target="_blank">read more</a> <button id="cookiemessagebutton" class="btn">Accept</button>
+	We use cookies, just to track visits to our website, we store no personal details. <a class="cookiemessage__link" href="#" target="_blank">read more</a> <button id="cookiemessagebutton">Accept</button>
 </div>
