--- a/source/html/index.html
+++ b/source/html/index.html
@@ -40,18 +40,44 @@
 			<span class="docu-settings docu-settings__type">int(days)</span>
 			<span class="docu-settings docu-settings__default">365</span>
 			<span class="docu-settings docu-settings__desc">Lifetime of cookie in days</span>
+			<span class="docu-settings docu-settings__example"><pre><code class="js">document.getElementById('cookiemessage').cookiemessage({
+	lifetime: 10
+});</code></pre></span>
 		</section>
 		<section class="docu-section">
 			<span class="docu-settings docu-settings__setting">button</span>
 			<span class="docu-settings docu-settings__type">object</span>
-			<span class="docu-settings docu-settings__default"><pre><code class="html">&lt;button id="cookiemessagebutton" class="btn"&gt;Accept&lt;/button&gt;</code></pre></span>
+			<span class="docu-settings docu-settings__default"><pre><code class="html">&lt;button id="cookiemessagebutton"&gt;Accept&lt;/button&gt;</code></pre></span>
 			<span class="docu-settings docu-settings__desc">Allows you to select a node or customize the HTML for the "Accept" button.</span>
+			<span class="docu-settings docu-settings__example"><pre><code class="js">document.getElementById('cookiemessage').cookiemessage({
+	button: document.getElementById('cookiemessage').getElementsByTagName('button')[0]
+});</code></pre></span>
 		</section>
 		<section class="docu-section">
 			<span class="docu-settings docu-settings__setting">position</span>
 			<span class="docu-settings docu-settings__type">string</span>
 			<span class="docu-settings docu-settings__default">bottom-right</span>
 			<span class="docu-settings docu-settings__desc">Set the position of the message. You can also use 'bottom-left' or 'bottom'.</span>
+			<span class="docu-settings docu-settings__example"><pre><code class="js">document.getElementById('cookiemessage').cookiemessage({
+	position: 'bottom-left'
+});</code></pre></span>
+		</section>
+		<section class="docu-section">
+			<span class="docu-settings docu-settings__setting">palette</span>
+			<span class="docu-settings docu-settings__type">onject</span>
+			<span class="docu-settings docu-settings__desc">Allows you to adjust the color of the cookie message.</span>
+			<span class="docu-settings docu-settings__example"><pre><code class="js">document.getElementById('cookiemessage').cookiemessage({
+	palette: {
+		message: {
+			background: '#000',
+			text: '#fff'
+		},
+		button: {
+			background: '#ff0000',
+			text: '#fff'
+		}
+	}
+});</code></pre></span>
 		</section>
 		<p>&nbsp;</p>
 		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus.</p>
